<resources>
    <string name="app_name">NewItsme</string>
    <string name="action_settings">Settings</string>
    <string name="et_Username">用户名 </string>
    <string name="et_Email">邮箱</string>
    <string name="et_Email_SignUp">邮箱注册</string>
    <string name="et_Password">密码</string>
    <string name="bt_send">登陆 </string>
    <string name="tv_titlbar">注册 </string>
    <string name="tv_zhuce">登录即代表你同意 </string>
    <string name="tv_forget_pw">忘记密码 </string>
    <string name="tv_ME">It\'sMe\'sTerms </string>
    <string name="nick_empty">Please enter the username.</string>
    <string name="email_empty">Please enter your email.</string>
    <string name="email_incorrect">Please enter correct email format.</string>
    <string name="pass_empty">Please enter your password.</string>
    <string name="pass_length_incorrect">Password should more than 6 letters.</string>
    <string name="network_no_avaliable">Internet is not connected, please try again.</string>
    <string name="register_fail">Registration failed</string>
    <string name="email_exist">Email registered, please login directly.</string> 
    <string name="no_user">账号为空</string>
    <string name="password_error">密码错误</string>
</resources>
