<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include  layout="@layout/titlebar" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/et_Username"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/et_Email"/>


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/et_Password"/>

    <Button
        android:id="@+id/bt_signup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/tv_titlbar"
        android:background="@drawable/button_shape"
        android:textAllCaps="false"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/titlebar_text"
        />
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_horizontal"
       android:layout_marginTop="15dp"
       android:layout_marginLeft="80dp">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/tv_zhuce"
           android:textColor="@color/tv_agree"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/tv_ME"
           android:textColor="@color/titlebar_background"/>

   </LinearLayout>


</LinearLayout>